@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-08
+2011-06-16 Andy Salnikov
+- generate CSS file in DdlPsanaDoc
+
 Tag: V00-00-07
 2011-05-10 Andy Salnikov
 - XmlReader: file name was incorrect if there were included files
